<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools.context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:background="@color/greyPink"
        tools:context="com.example.priyankakulkarni.hypergaragesale.PostActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView_title" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/textView_price" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.67"
            android:gravity="top"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:hint="@string/desc_hint"
            android:id="@+id/textView_desc"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:hint="@string/email_hint"
            android:id="@+id/textView_email"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
