<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/itemLabel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/attribute1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/lightpink"
        android:ellipsize="none"
        android:maxLines="1"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/attribute2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/lightpink"
        android:ellipsize="none"
        android:maxLines="1"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/attribute3"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        />



    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:ellipsize="none"
        android:maxLines="100"
        android:scrollHorizontally="false"
        android:textColor="@color/lightpink"
        android:layout_marginTop="5dp"/>


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/attribute4"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        />


    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="15sp"
        android:ellipsize="none"
        android:maxLines="100"
        android:scrollHorizontally="false"
        android:textColor="@color/lightpink"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/darkerBrown" />

</LinearLayout>